<resources>
    <string name="app_name">Movie Box</string>
    <string name="action_activity_name">ACTION</string>
    <string name="comedy_activity_name">COMEDY</string>
    <string name="detective_activity_name">DETECTIVE</string>
    <string name="drama_activity_name">DRAMA</string>
    <string name="fantasy_activity_name">FANTASY</string>
    <string name="horror_activity_name">HORROR</string>
    <string name="random_button">Random Movie</string>
    <string name="action_settings">Settings</string>
    <string name="movie_name">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Movie Overview</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="start_btn_text">Find a Movie</string>
    <string name="genres_tag">Genres List</string>
    <string name="top_rated">Most Rated Films</string>
    <string name="trailer">Trailer</string>
    <string name="similar_movies">Find Similar Movies</string>
</resources>
