<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/btnFindMovie"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/start_btn_text"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMain" />

    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="337dp"
        android:layout_height="347dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291"
        app:srcCompat="@drawable/movie_box_start_img" />


</androidx.constraintlayout.widget.ConstraintLayout>